update hosting site name to be invitree-app-sample

--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "source": "functions"
   },
   "hosting": {
-    "site": "firebase-ssr",
+    "site": "invitree-app-sample",
     "public": "public",
     "ignore": [
       "firebase.json",
