--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting:firebase-ssr,functions:ssr
+          args: deploy --only hosting:invitree-app-sample,functions:ssr
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
